애니메이션 완성

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="girl">
-        <!-- <div class="point"></div> -->
         <div class="spoon">
             <div class="shadow"></div>
             <div class="shadow-cover"></div>
@@ -17,7 +16,6 @@
             <div class="rect"></div>
         </div>
         <div class="hair-up">
-            <!-- <div class="bang top"></div> -->
             <div class="bang first"></div>
             <div class="bang second"></div>
             <div class="bang third"></div>
@@ -26,29 +24,25 @@
         <div class="face">
             <div class="eye-left">
                 <div class="eyeline left"></div>
-                <div class="cover one left"></div>
-                <div class="cover two left"></div>
+                <div class="eyeline-cover one left"></div>
+                <div class="eyeline-cover two left"></div>
                 <div class="pupil left"></div>
             </div>
             <div class="eye-right">
                 <div class="eyeline right"></div>
-                <div class="cover one right"></div>
-                <div class="cover two right"></div>
+                <div class="eyeline-cover one right"></div>
+                <div class="eyeline-cover two right"></div>
                 <div class="pupil right"></div>
-                <!-- <div class="wink top"></div>
-                <div class="wink middle"></div>
-                <div class="wink bottom"></div> -->
             </div>
             <div class="nose">
-                <div class="bridge"></div>
-                <div class="cover three"></div>
+                <div class="nose-cover"></div>
                 <div class="tip"></div>
             </div>
             <div class="cheek left"></div>
             <div class="cheek right"></div>
             <div class="mouth">
                 <div class="mouth-up"></div>
-                <div class="cover four"></div>
+                <div class="mouth-cover"></div>
                 <div class="mouth-bottom"></div>
             </div>
         </div>
